Adding registration and fake email code

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,7 @@
 lisa.url=https://lisa-ui-staging.kubes.lisa.aus.com/
+lisa.url.register=https://lisa-ui-staging.kubes.lisa.aus.com/register
 lisa.username=username
 lisa.password=password
 browser.name=chrome
-phone.verification.url=https://freephonenum.com/us/receive-sms/8044064234
+phone.verification.url=https://freephonenum.com/us/receive-sms/7077190993
+fake.email.url=https://www.tempmailaddress.com
