--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,5 @@ lisa.password=password
 browser.name=chrome
 phone.verification.url=https://freephonenum.com/us/receive-sms/7077190993
 fake.email.url=https://www.tempmailaddress.com
+# true or false
+headless=true
