Adding OptIn & Opt out / Database / Change Phone Number Scenarioies

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -6,5 +6,13 @@ browser.name=chrome
 phone.verification.url=https://freephonenum.com/us/receive-sms/8044064234
 phone.verification.url2=https://freephonenum.com/us/receive-sms/7077190993
 fake.email.url=https://www.tempmailaddress.com
+change.phone.number.url=https://freephonenum.com/us/receive-sms/
 # true or false
 headless=false
+
+# Database configuration
+  # jdbc:postgresql://<database_host>:<port>/<database_name>
+db.host=jdbc:postgresql://{host}/{db_name}
+db.username={user}
+db.password={password}
+db.driver=org.postgresql.Driver
