Commiting google voice code

--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,10 +1,9 @@
 lisa.url=https://lisa-ui-staging.kubes.lisa.aus.com/
 lisa.url.register = https://lisa-ui-staging.kubes.lisa.aus.com/register
-lisa.username=Testing@sharklasers.com
-lisa.password=Test@321
+lisa.username=newsp@sharklasers.com
+lisa.password=Test@600
 browser.name=chrome
-phone.verification.url=https://freephonenum.com/us/receive-sms/8044064234
-phone.verification.url2=https://freephonenum.com/us/receive-sms/7077190993
+phone.verification.url=https://freephonenum.com/us/receive-sms/
 fake.email.url=https://www.tempmailaddress.com
 change.phone.number.url=https://freephonenum.com/us/receive-sms/
 # true or false
@@ -16,3 +15,13 @@ db.host=jdbc:postgresql://{host}/{db_name}
 db.username={user}
 db.password={password}
 db.driver=org.postgresql.Driver
+
+# Google Voice Settings
+google.voice.url=https://voice.google.com/u/0/messages
+actual.google.voice.username=automationlisa@gmail.com
+actual.google.voice.password=Tester123
+change.google.voice.username=automationchangelisa@gmail.com
+change.google.voice.password=Tester123
+
+# Sms code service type (google, freephone)
+sms.service.type=google
